# learning-opengl

./: .clang-format  .scratchpad.txt  CMakeLists.txt  README.md
plantuml/: first-refactor.puml  shader-object.puml
src/: camera.cpp  directional-light.cpp  light.cpp  main.cpp  material.cpp  mesh.cpp  shader.cpp  texture.cpp  util.cpp  window.cpp
src/glsl/: fragment.glsl  vertex.glsl
src/include/: camera.h  directional-light.h  light.h  material.h  mesh.h  precomp.h  shader.h  texture.h  util.h  window.h
